# dispatch_example

./: CMakeLists.txt  README.md  main.cpp
bad_dispatch/: bad_dispatch.h  bad_dispatch_impl.h
better_dispatch/: better_dispatch.h  better_dispatch_impl.h
common/: shape_intersector.h
even_better_dispatch/: even_better_dispatch.h  even_better_dispatch_impl.h
visitor_dispatch/: visitor_dispatch.h
